--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-.flex-container{
-    display:flex;
-    justify-content:center;
-    flex-flow: row wrap;
-}
 h1{
   font-size: 30px;
   display:flex;
@@ -10,9 +5,13 @@ h1{
   color: white;
   background-color: black;
 }
-img{
-  border-radius: 25px;
-}
 .flex-container > article{
   display:flex;
 }
+img {
+  max-width: 100%;
+  border-radius: 1rem 0 1rem;
+  padding: 0.5rem;
+  border: solid 1px darkgrey;
+}
+
