--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 h1{
   font-size: 30px;
   display:flex;
@@ -8,10 +13,39 @@ h1{
 .flex-container > article{
   display:flex;
 }
+.flex-container > p{
+  display:flex;
+  flex-wrap: wrap;
+}
 img {
   max-width: 100%;
-  border-radius: 1rem 0 1rem;
+  border-radius: 25px;
   padding: 0.5rem;
   border: solid 1px darkgrey;
 }
 
+article > div{
+  display:flex;
+  flex-direction:column;
+  flex-wrap: wrap;
+  justify-content:center;
+  align-items:center;
+}
+article > .minecraft{
+  width: 43%;
+}
+article > .hero{
+  width: 50%;
+}
+article > .minecraft2{
+  width: 50%;
+}
+article > .hero2{
+  display:flex;
+  margin: 6%;
+  width: 45%;
+}
+article p{
+  padding: 30px;
+  border: 2px solid black;
+}
