--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,11 @@ article p {
   border: 2px solid green;
   color: rgb(0, 255, 0);
 }
+
+footer {
+  border: 2px;
+  border-color: yellow;
+  display: flex;
+  justify-content: center;
+  color: yellow
+}
