--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  color: yellow
+  color: green
 }
 
 .easteregg a {
