--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(0, 0, 0);
+  font-family: 'VT323', monospace;
 }
 
 h1 {
@@ -34,7 +36,6 @@ img {
 }
 
 .imgonnacry {
-  font-family: 'Courier New', Courier, monospace;
   display: flex;
   width: 50%;
   justify-content: space-around;
@@ -50,7 +51,6 @@ img {
 }
 
 article>div {
-  font-family: 'Courier New', Courier, monospace;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
